<resources>
    <string name="app_name">Apte4ka</string>
    <string name="tvTextAddAid">Добавить \nАптечку</string>
    <string name="ivbAddAid">ivbAddAid</string>
    <string name="tvTextAddPreparation">Добавить\nЛекарство</string>
    <string name="aid_kit_name">Название аптечки</string>
    <string name="enter_name_aid_kit">Введите название аптечки</string>
    <string name="enter_description_aid_kit">Введите описания аптечки</string>
    <string name="description_aid_kit">Описание аптечки</string>
    <string name="button_add">Добавить</string>
    <string name="button_save">Сохранить</string>
    <string name="img_aid_kit">картинка аптечки</string>
    <string name="button_delete">кнопка удалить</string>
    <string name="button_edit">кнопка изменить</string>
    <string name="prep_img">картинка препарата</string>
    <string name="text_package">Фасовка:</string>
    <string name="packaging_list">Фасовка</string>
    <string name="symptoms">Симптомы:</string>
    <string name="symptoms_list">Симптомы</string>
    <string name="settings">Настройки</string>
    <string name="notify">Уведомления</string>
    <string name="restore_backup">Резерв / Восстановить</string>
    <string name="restore">Резервная копия</string>
    <string name="backup">Восстановить</string>
    <string name="date_create">Дата создания:</string>
    <string name="date_exp">Срок годности:</string>
    <string name="name_preparation">Название препарата</string>
    <string name="enter_name_preparation">Введите название препарата</string>
    <string name="where_add_aid_kit">В какую аптечку добавить?</string>
    <string name="upload_photo_preparation">Загрузите фото препарата</string>
    <string name="add_photo_preparation">фото препарата</string>
    <string name="add_package_preparation">Укажите фасовку препарата</string>
    <string name="enter_package_preparation">Введите фасовку препарата</string>
    <string name="enter_symptoms">Введите симптомы с которыми помогает препарат</string>
    <string name="description_preparation">Описание препарата</string>
    <string name="enter_description_preparation">Введите описание препарата</string>
    <string name="date_create_preparation">Дата создания препарата</string>
    <string name="data_exp_preparation">Дата окончания срока</string>
    <string name="detail_description">Детальное описание:</string>
    <string name="search">Поиск</string>
    <string name="clear_filter">Очистить фильтр</string>
    <string name="filter_30_day">Отфильтровать препараты сроком годности менее 30 дней</string>
    <string name="text_end_day">Осталось дней:</string>
    <string name="days_left">Осталось:</string>
    <string name="copy_prep">Скопировать Лекарство</string>
    <string name="splash_image">splash image</string>
    <string name="image_avatar_on_drawer">image avatar on drawer</string>
    <string name="handbook">Справочники</string>
    <string name="slogan">Всегда под рукой</string>
    <string name="fab_add_symptom">fab_add_symptom</string>
    <string name="fab_add_packaging">fab_add_packaging</string>
    <string name="img_notify">img_notify</string>
    <string name="read_notify_img">read_notify_img</string>
    <string name="save_db">Сохранить БД</string>
    <string name="restore_db">Восстановить БД</string>
    <string name="image_list_aid_kit">image_list_aid_kit</string>
    <string name="icon_aid_kit">Иконка Аптечки</string>
    <string name="press_button_icon_change">Нажмите на иконку чтобы заменить</string>
    <string name="text_backup">Сохраните файл базы данных для переноса на другое устройство</string>
    <string name="text_restore">Выберите файл базы данных для восстановления на данном устройстве</string>
    <string name="icon_desc">icon_desc</string>
</resources>