<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/settings">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/settingsFragment"
                    android:icon="@drawable/ic_baseline_settings_24"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/notifyFragment"
                    android:icon="@drawable/ic_baseline_notifications_24"
                    android:title="@string/notify" />
            </group>
        </menu>
    </item>
    <item android:title="@string/handbook">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/symptomFragment"
                    android:icon="@drawable/ic_baseline_symptom_24"
                    android:title="@string/symptoms_list" />
                <item
                    android:id="@+id/packagingFragment"
                    android:icon="@drawable/ic_baseline_packaging_24"
                    android:title="@string/packaging_list" />
            </group>
        </menu>
    </item>
    <item android:title="@string/restore_backup">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/restoreFragment"
                    android:icon="@drawable/ic_baseline_restore_24"
                    android:title="@string/restore" />
                <item
                    android:id="@+id/backupFragment"
                    android:icon="@drawable/ic_baseline_backup_24"
                    android:title="@string/backup" />
            </group>
        </menu>
    </item>

</menu>