<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="aidEdit"
            type="com.example.apte4ka.presentation.viewmodel.aidkit.AidKitViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragment.AidKitEditFragment">
    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="16sp"
        android:padding="4dp"
        android:text="@string/aid_kit_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name_aid_kit"
            android:text="@{aidEdit.aidKitLD.name}"
            android:textColorHint="#616161"
            android:textSize="14sp"
            android:maxLength="16"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="16sp"
        android:padding="4dp"
        android:text="@string/description_aid_kit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilName" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescription"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:hint="@string/enter_description_aid_kit"
            android:text="@{aidEdit.aidKitLD.description}"
            android:textColorHint="#616161"
            android:textSize="14sp"
            android:maxLength="75"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bConfirmAddAidKit"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="35dp"
        android:text="@string/button_add"
        android:backgroundTint="#2D61D0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>