<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.fragment.pagemenu.backup.BackupFragment">

        <ImageView
            android:id="@+id/ivBackupIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:background="@color/green"
            android:contentDescription="@string/backup"
            android:padding="4dp"
            app:layout_constraintBottom_toTopOf="@+id/bSaveDB"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_backup_24" />

        <TextView
            android:id="@+id/tvDescBackup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/aid_kit_shape"
            android:gravity="center"
            android:padding="4dp"
            android:layout_marginEnd="10dp"
            android:text="@string/text_backup"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/bSaveDB"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivBackupIcon"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/bSaveDB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_db"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>