<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.fragment.aidkit.AidKitAddFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvName"
                style="@style/aid_kit"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:text="@string/aid_kit_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivAidKitNameIcon"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="#019E58"
                app:layout_constraintBottom_toTopOf="@+id/tvImage"
                app:layout_constraintEnd_toStartOf="@+id/tilNamePreparation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvName"
                app:srcCompat="@drawable/ic_aid_kit_white" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNamePreparation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivAidKitNameIcon"
                app:layout_constraintTop_toBottomOf="@+id/tvName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_name_aid_kit"
                    android:maxLength="16"
                    android:textColorHint="#616161"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvImage"
                style="@style/aid_kit"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:text="@string/icon_aid_kit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilNamePreparation" />

            <TextView
                android:id="@+id/tvHintIcon"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/press_button_icon_change"
                android:textAllCaps="true"
                android:textColor="@color/light_black"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvImage" />

            <ImageView
                android:id="@+id/ivIconAidKit"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/icon_aid_kit"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHintIcon"
                app:srcCompat="@drawable/aid_kit_in_list" />

            <TextView
                android:id="@+id/tvDescription"
                style="@style/aid_kit"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:text="@string/description_aid_kit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivIconAidKit" />

            <ImageView
                android:id="@+id/ivAidKitDescriptionIcon"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:background="#019E58"
                app:layout_constraintBottom_toBottomOf="@+id/tilDescription"
                app:layout_constraintEnd_toStartOf="@+id/tilDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDescription"
                app:srcCompat="@drawable/ic_aid_kit_description_white" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDescription"
                android:layout_width="0dp"
                android:layout_height="150dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivAidKitDescriptionIcon"
                app:layout_constraintTop_toBottomOf="@+id/tvDescription">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:hint="@string/enter_description_aid_kit"
                    android:maxLength="75"
                    android:textColorHint="#616161"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bConfirmAddAidKit"
                style="@style/button_aid_kit"
                android:text="@string/button_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>